<resources>
    <string name="app_name">AndroidDemos</string>
    <string name="go_nested_scrolling">NestedScrolling</string>
    <string name="touch_event">触摸事件分发</string>
    <string name="go_recycler_view">recyclerView</string>
    <string name="go_material_design">Material Design</string>
    <string name="go_anim">动画demo</string>
    <string name="remote_service">远程服务demo</string>
    <string name="widget_demo">控件demo</string>
    <string name="compress_demo">图片压缩</string>

    <!-- 通用部分 -->
    <string name="input_hint">请输入</string>


    <!-- 图片压缩测试页面-->
    <string name="compress_title">图片压缩</string>
    <string name="width_row_title">宽度：</string>
    <string name="height_raw_title">高度：</string>
    <string name="start_compress">选择图片进行压缩</string>
</resources>
