<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aries.android.demo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/goNestedScrolling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_nested_scrolling"/>

        <Button
            android:id="@+id/goTouch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/touch_event"/>

        <Button
            android:id="@+id/goRecyclerDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/go_recycler_view" />
    </LinearLayout>


</RelativeLayout>
