<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="config"
            type="com.aries.android.demo.compress.CompressViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView"
                style="@style/title_text_style"
                android:layout_width="wrap_content"
                android:text="@string/width_row_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/width"
                style="@style/edit_item_style"
                android:layout_width="100dp"
                android:layout_marginStart="32dp"
                android:hint="@string/input_hint"
                android:inputType="number"
                android:text="@{config.width}"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />
        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/textView3"
                style="@style/title_text_style"
                android:layout_width="wrap_content"
                android:text="@string/height_raw_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/height"
                style="@style/edit_item_style"
                android:layout_width="100dp"
                android:layout_marginStart="32dp"
                android:hint="@string/input_hint"
                android:inputType="number"
                android:text="@{config.height}"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />
        </android.support.constraint.ConstraintLayout>


        <TextView
            android:id="@+id/startCompress"
            style="@style/event_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/start_compress" />


    </LinearLayout>

</layout>

